dodao logo sliku u header i stvorio index.css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glavna stranica</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <header>
+        <p>
+            <img src="" alt="">
+        </p>
+        <h1>Headert Pic With Menu Buttons</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
