napravio prvu stranicu sa css-om

--- a/index.html
+++ b/index.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glavna stranica</title>
     <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
     <header>
         <p>
-            <img src="" alt="">
+            <img src="./media/img/zadatak.jpg" alt="slika upitnici">
         </p>
-        <h1>Headert Pic With Menu Buttons</h1>
+        <div>
+            <h1>Header Pic With Menu Buttons</h1>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Content</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-
+        <article>
+            <img src="./media/img/lotus.jpg" alt="cvijet lotus">
+            <section>
+                <h1>Zadatak</h1>
+                <p>Ovo je zadatak kojeg smo dobili na nastavi 07.03.2024.godine. <br>
+                    Trebamo napraviti 6 stranica na kojima trebamo prikazati sve sto smo do sada naucili. <br>
+                    Ja sam napravio malo po svome, pa sam ukljucio i css. <br>
+                    Naravno, trebamo se koristiti i sa github-om! <br>
+                    Ovo je zadatak kojeg smo dobili na nastavi 07.03.2024.godine. <br>
+                    Trebamo napraviti 6 stranica na kojima trebamo prikazati sve sto smo do sada naucili. <br>
+                    Ja sam napravio malo po svome, pa sam ukljucio i css. <br>
+                    Naravno, trebamo se koristiti i sa github-om!
+                </p>
+            </section>
+        </article>
+        <aside>
+            <ul>
+                <li><a href="">Links</a></li>
+                <li><a href="">Google</a></li>
+                <li><a href="">Msn</a></li>
+                <li><a href="">Yahoo</a></li>
+                <li><a href="">Github</a></li>
+            </ul>
+        </aside>
     </main>
     <footer>
+        <hr>
+        <div>
+            <img src="./media/img/facebook.png" alt="facebook logo">
+            <img src="./media/img/twitter.png" alt="twitter logo">
+        </div>
+        
 
     </footer>
-    
 </body>
+
 </html>
